# Comodity-Price-Forecasting

./: .gitignore  Dockerfile  README.md  _read_cell.py  fix_notebook.py  fix_notebook_v2.py  new.ipynb  notebook_demo.ipynb  notebook_demo_v2.ipynb  pyproject.toml  requirements.txt  walkthrough.md
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: commodities.yaml  model_config.yaml
data/raw/: crude_oil.csv  datacoffee.csv  datacorn.csv  datacotton.csv  datagas.csv  datamilk.csv  dataoil.csv  datapork.csv  datapvc.csv  datarice.csv  datarubber.csv  datasteel.csv  datasugar.csv  dataurea.csv
examples/: visualization_example.md
src/: __init__.py
src/evaluation/: __init__.py  backtest.py  metrics.py
src/features/: generator.py  sequence_dataset.py
src/inference/: future_forecaster.py  predictor.py
src/ingestion/: loader.py  validator.py
src/monitoring/: monitor.py
src/preprocessing/: __init__.py  cleaner.py  splitter.py  transformer.py
src/training/: finetuner.py  trainer.py
src/visualization/: __init__.py  plot_predictions.py
tests/unit/: test_ingestion.py
